# Qinstagram

./: .cursorrules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: auth.md  direct.md  feed.md  graphql.md  readme.md  stories.md  websocket.md
examples/: inbox.rs  login.rs
src/: client.rs  config.rs  constants.rs  error.rs  graphql.rs  lib.rs  prelude.rs
src/auth/: challenge.rs  login.rs  mod.rs  session.rs
src/direct/: broadcast.rs  inbox.rs  mod.rs  parser.rs  thread.rs
src/feed/: timeline.rs
src/media/: download.rs  upload.rs
src/notify/: inbox.rs
src/realtime/: events.rs  mod.rs  mqtt.rs  subscriptions.rs
src/stories/: mod.rs  tray.rs  user_stories.rs
src/transport/: client.rs  device.rs  headers.rs  mod.rs  signing.rs
src/types/: media.rs  message.rs  mod.rs  post.rs  profile.rs  story.rs  thread.rs
src/user/: mod.rs  profile.rs  search.rs
src/ws/: mod.rs
tests/: mocks.rs
