[package]
name = "qinstagram"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies", "json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
rand = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
regex = "1.10"
base64 = "0.22"
dirs = "5.0"
hex = "0.4.3"
reqwest_cookie_store = "=0.8.0"
cookie_store = "=0.21.1"
strsim = "0.11.1"

[dependencies.rumqttc]
version = "0.24"
optional = true

[dependencies.async-graphql]
version = "7.0"
optional = true
features = ["chrono"]

[dependencies.axum]
version = "0.7"
optional = true
features = ["ws", "macros"]

[dependencies.futures-util]
version = "0.3"
optional = true

[features]
default = []
realtime = ["rumqttc"]
graphql = ["async-graphql"]
websocket = ["axum", "futures-util"]
